(fix)(headless)Add null handling to avoid NPEs.

--- a/launchers/standalone/src/main/resources/application.yaml
+++ b/launchers/standalone/src/main/resources/application.yaml
@@ -7,7 +7,7 @@ server:
 
 spring:
   profiles:
-    active: ${S2_DB_TYPE:h2}
+    active: ${S2_DB_TYPE:mysql}
   application:
     name: chat
   config:
