--- a/launchers/standalone/src/main/resources/application-mysql.yaml
+++ b/launchers/standalone/src/main/resources/application-mysql.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://${S2_DB_HOST:localhost}:${S2_DB_PORT:3306}/${S2_DB_DATABASE:mysql}?useUnicode=true&characterEncoding=UTF-8&useSSL=false&allowMultiQueries=true&allowPublicKeyRetrieval=true
     username: ${S2_DB_USER:root}
     password: ${S2_DB_PASSWORD:}
